--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#love-story-section">Love Story</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#favorite-videos">Gallery</a>
+                        <a class="nav-link" href="#gallery-section">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#read-me-section">Read Me</a>
@@ -124,6 +124,10 @@
 <!--                         Box 6: Date 6 -->
                         <div class="date-box" data-toggle="modal" data-target="#letterModal6">
                             <div class="date-label">February 20, 2024</div>
+                        </div>
+                        <!-- Box 7: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal7">
+                            <div class="date-label">March 5, 2024</div>
                         </div>
                     </div>
                 </div>
@@ -242,9 +246,27 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
 </div>
+
+<!-- Modal for Letter 7 -->
+<div class="modal fade" id="letterModal7" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Love </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Eljie,</p>
+                <p>God bless sa exams! Proud na proud ako sa 'yo kahit anong mangyari. Kung sakaling sumagi man sa isip mo ang pagbalik, pagnanais na lumingon muli, mangulila sa pagmamahal na sa akin lang nakita, narito lang ako. Kung sa pagkakataong wala kang mapuntahan, maalayan ng pag-iyak, at mapagod sa buhay na nakalatag, narito ako. Tatanggapin kita. Palagi't lagi, tanggap kita, mahal.  </p><p> Lagi't Lagi Kang Mahal,<br> Hirang</p>
+            </div>
+        </div>
+    </div>
+</div>
         
 <!-- gallery -->
-<section id="favorite-videos" class="section" style="background-color: #f2f2f2;">
+<section id="gallery-section" class="section" style="background-color: #f2f2f2;">
     <h2 style="text-align: center; margin-bottom: 30px;">Gallery</h2>
     <div class="gallery">
         <div class="card">
