--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content" id="modal-content-5">
             <div class="modal-header">
-                <h5 class="modal-title" id="letterModal2Label"> Love </h5>
+                <h5 class="modal-title" id="letterModal2Label"> ... </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Eljie,</p>
-                <p>God bless sa exams! Proud na proud ako sa 'yo kahit anong mangyari. Kung sakaling sumagi man sa isip mo ang pagbalik, pagnanais na lumingon muli, mangulila sa pagmamahal na sa akin lang nakita, narito lang ako. Kung sa pagkakataong wala kang mapuntahan, maalayan ng pag-iyak, at mapagod sa buhay na nakalatag, narito ako. Tatanggapin kita. Palagi't lagi, tanggap kita, mahal.  </p><p> Lagi't Lagi Kang Mahal,<br> Hirang</p>
+                <p>Liyag,</p>
+                <p>God bless sa exams! Proud na proud ako sa 'yo kahit anong mangyari. Kung sakaling sumagi man sa isip mo ang pagbalik, pagnanais na lumingon muli, mangulila sa pagmamahal na sa akin lang nakita, narito lang ako. Kung sa pagkakataong wala kang mapuntahan, maalayan ng luha, at mapagod sa buhay na nakalatag, narito ako. Tatanggapin kita. Palagi't lagi, tanggap kita, mahal.  </p><p> Lagi't Lagi Kang Mahal,<br> Hirang</p>
             </div>
         </div>
     </div>
