--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal7">
                             <div class="date-label">March 5, 2024</div>
                         </div>
+                        <!-- Box 8: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal7">
+                            <div class="date-label">March 28, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -264,7 +268,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
 </div>
-        
+ <!-- Modal for Letter 8 -->
+<div class="modal fade" id="letterModal8" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Sorry 😔 </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Eljie,</p>
+                <p>Mahal na mahal na mahal kita. Patawad. Hindi ko ni-mean na sabihing iblock mo ako sa lahat para hindi na kita ma-contact. Hindi ko rin alam na gagawin mo agad. Patawad. Sorry, love. I'm very sorry. Hindi kita ma-contact kahit saan:(. I'm sorry. Gusto ko lang namang ma-enjoy mo yung ball nang hindi ako iniisip. Patawad. Sorry. Sorry. I'm sorry. I love you so much. Mahal na mahal. I'm sorry. I love you.,<br>Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>       
 <!-- gallery -->
 <section id="gallery-section" class="section" style="background-color: #f2f2f2;">
     <h2 style="text-align: center; margin-bottom: 30px;">Gallery</h2>
