--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal9">
                             <div class="date-label">June 6, 2024</div>
                         </div>
+                         <!-- Box 10: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal10">
+                            <div class="date-label">June 9, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -305,7 +309,24 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             </div>
         </div>
     </div>
-    </div>       
+    </div>   
+                 <!-- Modal for Letter 10 -->
+<div class="modal fade" id="letterModal10" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Be Safe </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p>Ingat ikaw lagi, love. Kwento ko lang, host ang PUP ng Mechanical Engineering Conference. May quiz bee roon na regional kaso di kami kasali kasi kami ang host. Pero sa amin galing ang questions. Naghahanap lang me ng questions now na mahirap hehehe. Miss na kita. Ingat lagi.  I love you.<br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>    
 <!-- gallery -->
 <section id="gallery-section" class="section" style="background-color: #f2f2f2;">
     <h2 style="text-align: center; margin-bottom: 30px;">Gallery</h2>
