--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal10">
                             <div class="date-label">June 9, 2024</div>
                         </div>
+                                                 <!-- Box 11: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal11">
+                            <div class="date-label">June 11, 2024</div>
+                        </div>
+                                                 <!-- Box 12: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal12">
+                            <div class="date-label">June 12, 2024</div>
+                        </div>
+                                                 <!-- Box 13: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal13">
+                            <div class="date-label">June 13, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -327,6 +339,57 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
     </div>    
+                 <!-- Modal for Letter 11 -->
+<div class="modal fade" id="letterModal11" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Miss U </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> Miss na kita. Hiling ko lang lagi na ligtas ikaw. I miss you. I love you.<br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>
+                 <!-- Modal for Letter 12 -->
+<div class="modal fade" id="letterModal12" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Ingat </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p>Inom ka lagi vitamins and meds. Sana kumakain ka sa tamang oras. Mahal na mahal kita. Miss na kita. Ingat lagi.  I love you.<br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>  
+                 <!-- Modal for Letter 13 -->
+<div class="modal fade" id="letterModal13" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> 13 </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> 13th message. Ikaw pa rin. Ikaw lang. Ikaw palagi. Ikaw, mahal. Miss na kita. I love you.<br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>  
 <!-- gallery -->
 <section id="gallery-section" class="section" style="background-color: #f2f2f2;">
     <h2 style="text-align: center; margin-bottom: 30px;">Gallery</h2>
