--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal13">
                             <div class="date-label">June 13, 2024</div>
                         </div>
+                         <!-- Box 14: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal13">
+                            <div class="date-label">July 16, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -390,6 +394,24 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
     </div>  
+<!-- Modal for Letter 14 -->
+<div class="modal fade" id="letterModal13" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> 1st ILY </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p>I love you. <3 <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>  
+        
 <!-- gallery -->
 <section id="gallery-section" class="section" style="background-color: #f2f2f2;">
     <h2 style="text-align: center; margin-bottom: 30px;">Gallery</h2>
