--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal15">
                             <div class="date-label">July 17, 2024</div>
                         </div>
+                         <!-- Box 16: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal16">
+                            <div class="date-label">July 18, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -428,6 +432,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p>I miss you. Sana tama decision ko ngayon. Alam kong pagsisihan ko. Ikaw pa rin talaga ang pinili ko. I love you. <3 <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>  
+        <!-- Modal for Letter 16 -->
+<div class="modal fade" id="letterModal16" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> 3rd ILY </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p>Hirap. Bago matulog, paggising, pagbangon, pagtimpla ng kape, ikaw ang iniisip. Kumusta ka na kaya? Nahihirapan ka na rin siguro :(. Sana ligtas ka at pamilya mo sa byahe. Sana okay ka lagi. Miss na kita. Mahal kita. Sana makita kong tama ang desisyon ko. Hindi pa ngayon, pero sa hinaharap, nakikita kong magiging mas masaya ka, Liyag. <br> - Arvin</p>
             </div>
         </div>
     </div>
