--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal16">
                             <div class="date-label">July 18, 2024</div>
                         </div>
+                        <!-- Box 17: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal17">
+                            <div class="date-label">July 19, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -449,6 +453,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p>Hirap. Bago matulog, paggising, pagbangon, pagtimpla ng kape, ikaw ang iniisip. Kumusta ka na kaya? Nahihirapan ka na rin siguro :(. Sana ligtas ka at pamilya mo sa byahe. Sana okay ka lagi. Miss na kita. Mahal kita. Sana makita kong tama ang desisyon ko. Hindi pa ngayon, pero sa hinaharap, nakikita kong magiging mas masaya ka, Liyag. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+    </div>  
+                <!-- Modal for Letter 17 -->
+<div class="modal fade" id="letterModal17" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> The Day Before D-Day </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> Kung sakaling biglang humakbang palayo sa oras na magtama ang ating mga mata, tawagin mo ang aking pangalan. Sa pamamaraang hindi pagalit, malungkot, o masaya. Tawagin mo ako gaya ng pagtawag mo sa pagmamahal. I miss you. I love you. Ingat kayo lagi ng pamilya mo. Mahal kita, El. <br> - Arvin</p>
             </div>
         </div>
     </div>
