--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal18">
                             <div class="date-label">When Our Eyes First Met</div>
                         </div>
+                        <!-- Box 19: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal19">
+                            <div class="date-label">July 21, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -491,6 +495,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p> Alam kong ikaw iyon. Kahit hindi kita nakita agad dahil malayo, alam kong ikaw iyon. "May iaabot lang po," sabi ko sa guard. Nahiya ako kasi sa paradahan ng motor kita pinaupo. Nahiya ako sa madaming bagay. Pawisin at amoy araw(?) dahil sa init at byahe pero nawala na sa isip ko noong nag sink in sa akin na katabi na kita. Hindi ako makatingin sa mata kasi alam kong aalis ka rin. Maaring maka-ambag sa rason ng pagbitaw ang imahe o ugaling ipinakita ko kanina, o hindi. Hindi ko na inisip. Totoo, napakaganda mo. Malayo pa lang, maliwanag ka na. Nahiya talaga ako kasi napakaganda naman ng kasama ko, tapos ako, pawisin. Gwapo pa rin naman ako sa paningin ko(?). Si vin, isang id lace na nakabox, at isang hindi nakabox ang mga regalo ko. Nayakap kita. Sa wakas! Yakap na hinihintay ko sa loob ng 100000 years. Yakap mo lang. Walang ibang gusto. Kung bibigyan ako ng pagkakataong humiling, ahm, maging tayo habangbuhay. Sa ginhawa, kalungkutan, pagod, pagpapahinga, galit, kahit ayaw mo na, sana tayo pa rin. Nagkamali ako sa madaming bagay. Sa desisyon ko noong nakaraan, iniisip ko 'yung future mo. Ikaw na masaya kasi hindi ko na nasasaktan, ikaw na hindi na nasstress gabi gabi, tuwing madaling araw dahil di ka napakikinggan, at sa araw araw mga bagay na nagpapadanas sa'yo ng sakit. Pero hindi, mali kasi hindi ko naisip na hindi ko kayang makitang masaya ka sa iba, kung kaya naman kita pasayahin. Pero alam ko, wala na rin chance. Kung pwede lang ibalik, ibabalik ko. Kung pwede pa. Sana. <br> Tungkol sa sinabi ko sa guard na iaabot ko, hindi ko alam kung ano talaga 'yung inabot ko, 'yung nasa echo bag ba na maliit ng mumuso o yung oras, saya, pagmamahal, at yakap ba ng may halong kaba kasi iniisip na mamaya ay talagang wala ka na. Sana nabigay ko ang gusto mo, mahal. Wala akong ibang gusto, ikaw lang. Hindi ka required at hindi pipiliting ibigay ang gusto ko, pero ikaw lang talaga ang gusto ko. Sana makuha kita. Ulit. Mahal kita, Liyag, Eljie, Love. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+</div>
+                           <!-- Modal for Letter 19 -->
+<div class="modal fade" id="letterModal19" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Sana </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> Masakit. Pero sana, sana tayo nalang ulit. Sana pwede pa tayo. Sana makuha kita. Ulit. Mahal kita, Love. <br> - Arvin</p>
             </div>
         </div>
     </div>
