--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal19">
                             <div class="date-label">July 21, 2024</div>
                         </div>
+                         <!-- Box 20: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal20">
+                            <div class="date-label">July 22, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -512,6 +516,24 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p> Masakit. Pero sana, sana tayo nalang ulit. Sana pwede pa tayo. Sana makuha kita. Ulit. Mahal kita, Love. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+         <!-- Modal for Letter 20 -->
+<div class="modal fade" id="letterModal20" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Get Well Now, Please </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> Pagdadasal ko lagi na lagi kang malusog at ligtas. Ipagdadasal ko rin na marinig dasal ko. Miss na miss na kita. Nag-aalala ako nang sobra. Sana gumaling ka na. Sana maging tayo habang buhay. Mahal na mahal kita, Love. <br> - Arvin</p>
             </div>
         </div>
     </div>
