--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             </div>
             <div class="modal-body">
                 <p>Love,</p>
-                <p> Kung pagiging oa ang pagmamahal na ipinapakita ko, handa akong maging oa buong buhay ko maramdaman mo lang na mahal kita. Patawad sa pagkakamali ko, kakulangan, hindi pakikinig sa iyo sa nakaraan. Makikinig ako. Mahal kita. Mahal na mahal kita, Love. <br> - Arvin</p>
+                <p> Sana gumaling ka naaaaaaaa:(((. Please. Pagaling ka na agad. Love. Please. Pagaling ka na. At love, kung pagiging oa ang pagmamahal na ipinapakita ko, handa akong maging oa buong buhay ko maramdaman mo lang na mahal kita. Patawad sa pagkakamali ko, kakulangan, hindi pakikinig sa iyo sa nakaraan. Makikinig ako. Mahal kita. Mahal na mahal kita, Love. <br> - Arvin</p>
             </div>
         </div>
     </div>
