--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal22">
                             <div class="date-label">July 24, 2024</div>
                         </div>
+                        <!-- Box 23: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal23">
+                            <div class="date-label">July 25, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -580,7 +584,24 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
 </div>
-
+<!-- Modal for Letter 23 -->
+<div class="modal fade" id="letterModal23" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> I love you </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> I love you. Matatanggap ko na ata. Get well soon. I miss you. I love you, love. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+</div>
+        
 
 
 
