--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal23">
                             <div class="date-label">July 25, 2024</div>
                         </div>
+                        <!-- Box 24: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal24">
+                            <div class="date-label">July 26, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -597,6 +601,24 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p> I love you. Matatanggap ko na ata. Get well soon. I miss you. I love you, love. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for Letter 24 -->
+<div class="modal fade" id="letterModal24" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> I love you </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> Kung minsang bulong ng kalungkutan lang ang tanging naririnig, handa akong sumigaw. Hindi ko alam kung matatanggap ko. Dito lang ako, mahal. I love you. <br> - Arvin</p>
             </div>
         </div>
     </div>
