--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal24">
                             <div class="date-label">July 26, 2024</div>
                         </div>
+                        <!-- Box 25: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal25">
+                            <div class="date-label">July 27, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -619,6 +623,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p> Kung minsang bulong ng kalungkutan lang ang tanging naririnig, handa akong sumigaw. Hindi ko alam kung matatanggap ko. Dito lang ako, mahal. I love you. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="letterModal25" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Thank you </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> Salamat sa siyam na buwan na pag-ibig. Hindi tayo pusa na may siyam na buhay. Hindi maaring mamatay ang isang pag-ibig at mayroon pang walo. Hindi rin tayo ulap. Na pagtapos ibuhos ang lahat ay muling mabubuo. Tao tayo, mahal. Nasasaktan, aalis, sasaya muli. Sana masaya ka. Mahal kita. I love you. <br> - Arvin</p>
             </div>
         </div>
     </div>
