--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal25">
                             <div class="date-label">July 27, 2024</div>
                         </div>
+                        <!-- Box 26: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal26">
+                            <div class="date-label">July 28, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -644,6 +648,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
 </div>
+
+        <div class="modal fade" id="letterModal26" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> I love you </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Love,</p>
+                <p> I love you. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+        </div>
         
 
 
