--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal26">
                             <div class="date-label">July 28, 2024</div>
                         </div>
+                         <!-- Box 27: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal27">
+                            <div class="date-label"> July 31, 2024</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -661,6 +665,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             <div class="modal-body">
                 <p>Love,</p>
                 <p> I love you. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+        </div>
+        
+        <div class="modal fade" id="letterModal27" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Chika </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p> Hiiii babi!</p>
+                <p> Hi, love. May progress na sa OJT. Sana makapagstart na ASAP. Nga pala, di ako makatulog kagabi kaya naghanap ako part-time online. May nakita akong part-time tutor online. Nag-apply ako at kat-take ko lang ng exam now. I JUST PASSED THE ONE-HOUR EXAM IN MATHEMATHICS AND PHYSICS!! Hehehe. Sana maayos lahat. Sana maging maayos tayo. I miss you. I love you. <br> - Arvin</p>
             </div>
         </div>
     </div>
