--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
 
 </head>
 <body>
+    <!-- Tulip Container -->
+ <div id="tulip-container">
+    <div class="tulip">
+      <div class="stem"></div>
+      <div class="leaves">
+        <div class="leaf left"></div>
+        <div class="leaf right"></div>
+      </div>
+      <div class="flower">
+        <div class="petal petal1"></div>
+        <div class="petal petal2"></div>
+        <div class="petal petal3"></div>
+      </div>
+    </div>
+  </div>
 
    <header>
     <!-- Navbar -->
