--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             </div>
             <div class="photo" id="her-photo">
                 
-                <img src="https://media.discordapp.net/attachments/1206154336137121852/1206984423837278268/IMG_20240213_232459.png?ex=65ddfed7&is=65cb89d7&hm=cefce3aeb32a57f0575789c2643a2311a428e3b2491e268e945439f631ec0a8c&=&format=webp&quality=lossless&width=296&height=395" alt="Arvin">
+                <img src="arvinbgg.png" alt="Arvin">
             </div>
         </div>
     </div>
