--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
                         <div class="date-box" data-toggle="modal" data-target="#letterModal27">
                             <div class="date-label"> July 31, 2024</div>
                         </div>
+                         <!-- Box 28: Last message -->
+                        <div class="date-box" data-toggle="modal" data-target="#letterModal28">
+                            <div class="date-label"> August 13, 2025</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -701,6 +705,23 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
         </div>
     </div>
         </div>
+
+        <div class="modal fade" id="letterModal28" tabindex="-1" role="dialog" aria-labelledby="letterModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" id="modal-content-5">
+            <div class="modal-header">
+                <h5 class="modal-title" id="letterModal2Label"> Proud </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p> Hi, love!</p>
+                <p> Hi, love. Kumusta? Proud ako sa'yo. I hope nabigay ko peace na need mo. I miss you. I love you. Happy and sad 13th. <br> - Arvin</p>
+            </div>
+        </div>
+    </div>
+        </div>
         
 
 
@@ -1161,3 +1182,4 @@ document.getElementById("hug-slider").addEventListener("input", function() {
 
 </body>
 </html>
+
