--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ On October 13, 2023, the universe blessed me with the gift of your presence, and
             </div>
             <div class="modal-body">
                 <p> Hi, love!</p>
-                <p> Hi, love. Kumusta? Proud ako sa'yo. I hope nabigay ko peace na need mo. I miss you. I love you. Happy and sad 13th. <br> - Arvin</p>
+                <p> Hi, love. Kumusta? Proud ako sa'yo. I hope nabigay ko peace na need mo. I miss you. I love you. Happy and sad 13th. Gusto ko nang bumalik tayo, kahit mahirap. Kaso iniisip kita. Baka hindi pwede. Pero sana pwede. Miss kita araw araw. Walang araw na hindi kita inisip. Pinipigilan kong kausapin ka, ayokong suwayin gusto mo. Nasasaktan ka rin ba gabi gabi? Patawarin mo ako. Masakit din sa umaga, di sapat yung kape. Miss na kita. Magkakausap pa kaya tayo at bilang tayo ulit? Sana. Pero sana yung hindi ka na nasasaktan. Ngayon, sana hindi ka na nasasaktan. Sana masaya ka na. Sana payapa na. Sana maluwag na sa dibdib. Sana hindi maingay, magulo, nakakulong, o nakasasakal. Sana okay ka. Palaging hiling sana ay okay ikaw. Mahal na mahal kita. Hanggang sa hindi na kita maisip. Mahal kita kahit kailan. Mahal kita hangga't may buwan. Mahal kita, El.<br> - Arvin</p>
             </div>
         </div>
     </div>
@@ -1182,4 +1182,5 @@ document.getElementById("hug-slider").addEventListener("input", function() {
 
 </body>
 </html>
+
 
